traces/bug_889.txt
src/fflib/lgfem.cpp:3683: error: DEAD_STORE
  The value written to &echelle (type double) is never used.
Showing all 1 steps of the trace


src/fflib/lgfem.cpp:3683:2: Write of unused value
3681.   	pferbase  fe[3]={0,0,0};
3682.   	pf3rbase  fe3[3]={0,0,0};
3683.   	double echelle=1;
         ^
3684.   	int cmp[3]={-1,-1,-1};
3685.   	theplot.SendNewPlot();
